--- a/Html_Testing.ipynb
+++ b/Html_Testing.ipynb
@@ -249,30 +249,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 273,
    "id": "42283a5e-1a6e-45d5-a190-799ea2442b1f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"650\"\n",
-       "            src=\"http://127.0.0.1:8054/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1cea5f73f70>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (4259689015.py, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[273], line 6\u001b[1;36m\u001b[0m\n\u001b[1;33m    <p>Makes predictions for diabetes</p>\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
@@ -280,7 +267,20 @@
     "banner_img = Image.open(\"assets/banner2.PNG\")\n",
     "\n",
     "link = html.A('View Github Repository', href=\"https://github.com/yourexodus/capstone_CDC\")\n",
-    " \n",
+    "border_item = html.Div( \n",
+    "    children=[\n",
+    "       <p>Makes predictions for diabetes</p>\n",
+    "    ],\n",
+    "    style={\n",
+    "         p{\n",
+    "        color:red;\n",
+    "        font-size:25px;\n",
+    "        font-weight:750;\n",
+    "        background-color:tan;        \n",
+    "    }\n",
+    "    }\n",
+    "\n",
+    ")\n",
     "\n",
     "banner_item = html.Div(\n",
     "    [\n",
@@ -310,7 +310,7 @@
     "banner_item.style = {'gridArea': \"banner_item\"}\n",
     "\n",
     "\n",
-    "layout = html.Div([link, banner_item])\n",
+    "layout = html.Div([link, banner_item], border_item)\n",
     "\n",
     "\n",
     "\n",
@@ -322,15 +322,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 275,
    "id": "afc8282c-34ae-4692-a8e1-eef5c461d82e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#pip install dash-bootstrap-components"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 283,
+   "id": "7e1ae8de-a01e-4668-b5e0-1d74d8ed63c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:8054/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x1cea73fd340>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import dash_bootstrap_components as dbc\n",
+    "\n",
+    "banner_img = Image.open(\"assets/banner2.PNG\").convert('RGB')\n",
+    "border_img = Image.open(\"assets/border1.PNG\").convert('RGB')\n",
+    "\n",
+    "link = dbc.NavLink(\"View Github Repository\", href=\"https://github.com/yourexodus/capstone_CDC\")\n",
+    "\n",
+    "banner_item = dbc.Row(\n",
+    "    [\n",
+    "        dbc.Col(\n",
+    "            [\n",
+    "                dbc.CardImg(src=banner_img, style={'height': '200px','width': '100%'}),\n",
+    "                # Add other components for sidebar and navbar here...\n",
+    "            ]\n",
+    "        )\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "border1_item = dbc.Row(\n",
+    "    [\n",
+    "        dbc.Col(\n",
+    "            [\n",
+    "                dbc.CardImg(src=border_img, style={'width': '100%'}),\n",
+    "                # Add other components for sidebar and navbar here...\n",
+    "            ]\n",
+    "        )\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "layout = dbc.Container([link, banner_item, border1_item])\n",
+    "\n",
+    "app = dash.Dash(__name__, external_stylesheets=[dbc.themes.BOOTSTRAP])\n",
+    "app.layout = layout\n",
+    "app.run_server(debug=True, port=8054)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 278,
    "id": "a6129333-348a-4639-a840-f1f02af5f33f",
    "metadata": {},
    "outputs": [
@@ -349,7 +416,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1ce9ea9d880>"
+       "<IPython.lib.display.IFrame at 0x1ce9f5fc6a0>"
       ]
      },
      "metadata": {},
@@ -370,7 +437,7 @@
     "                [\n",
     "                    html.Div([\n",
     "                       # html.Img(src=banner_img, style={'width': '100%', 'height': '50%'})\n",
-    "                        html.Img(src=doctorcat_img, style={'width': '200px', 'height': '200px'})\n",
+    "                        html.Img(src=doctorcat_img, style={'width': '600px', 'height': '400px', 'justify-content': 'center', 'align-items': 'center'})\n",
     "                       # html.Img(src=banner_img, 'width': '50%', 'height': '200px'),               # using the pillow image variable\n",
     "                        \n",
     "                    ]),\n",
@@ -391,7 +458,7 @@
     "doctorcat_item.style = {'gridArea': \"doctorcat_item\"}\n",
     "\n",
     "\n",
-    "layout = html.Div([link, doctorcat_item])\n",
+    "layout = html.Div([link, doctorcat_item, border1_item])\n",
     "\n",
     "\n",
     "\n",
@@ -403,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 247,
    "id": "789b4c79-5702-47b5-8996-704f4f7b386a",
    "metadata": {
     "scrolled": true
@@ -424,7 +491,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1cea72dbaf0>"
+       "<IPython.lib.display.IFrame at 0x1cea8506700>"
       ]
      },
      "metadata": {},
@@ -597,8 +664,12 @@
     "    {'label':'8 - $75,000 or more', 'value':8}\n",
     "    ]\n",
     "\n",
-    "\n",
-    "\n",
+    "######################################################################\n",
+    "##################  OUTPUT VALUE for income #######################\n",
+    "    \n",
+    "    html.Div(id='income-output'),\n",
+    "    \n",
+    "################################################################\n",
     "\n",
     "user_input1 = html.Div(  # Assuming user_input1 is a Div\n",
     "    children=[\n",
@@ -674,15 +745,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 252,
    "id": "33a18e01-f19d-44a2-bd39-80cab7f803ee",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2024-08-03 11:15:46,736] ERROR in app: Exception on /_alive_4804aadd-01f7-44d4-a9fb-ba14e2820618 [GET]\n",
+      "[2024-08-03 13:24:09,588] ERROR in app: Exception on /_alive_4804aadd-01f7-44d4-a9fb-ba14e2820618 [GET]\n",
       "Traceback (most recent call last):\n",
       "  File \"C:\\Users\\Everydayuse\\.conda\\envs\\capstoneCDC_venv\\lib\\site-packages\\flask\\app.py\", line 2447, in wsgi_app\n",
       "    response = self.full_dispatch_request()\n",
@@ -722,7 +795,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1cea75fa970>"
+       "<IPython.lib.display.IFrame at 0x1cea8468ca0>"
       ]
      },
      "metadata": {},
@@ -816,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 284,
    "id": "0b3e012c-1db8-4219-ab7a-ae4d1324f323",
    "metadata": {},
    "outputs": [
@@ -835,43 +908,11 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1cea8034dc0>"
+       "<IPython.lib.display.IFrame at 0x1cea7150970>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "---------------------------------------------------------------------------\n",
-      "NameError                                 Traceback (most recent call last)\n",
-      "Cell In[240], line 116, in callback_b(gphy_health_value=None)\n",
-      "    110 @app.callback(\n",
-      "    111     Output('phy-health-output', 'children'),\n",
-      "    112     [ Input('phy_health_id', 'value')]\n",
-      "    113 )\n",
-      "    114 \n",
-      "    115 def callback_b(gphy_health_value):\n",
-      "--> 116     return 'Youve selected \"{}\"'.format(phy_health_value)\n",
-      "\n",
-      "NameError: name 'phy_health_value' is not defined\n",
-      "\n",
-      "---------------------------------------------------------------------------\n",
-      "NameError                                 Traceback (most recent call last)\n",
-      "Cell In[240], line 116, in callback_b(gphy_health_value=None)\n",
-      "    110 @app.callback(\n",
-      "    111     Output('phy-health-output', 'children'),\n",
-      "    112     [ Input('phy_health_id', 'value')]\n",
-      "    113 )\n",
-      "    114 \n",
-      "    115 def callback_b(gphy_health_value):\n",
-      "--> 116     return 'Youve selected \"{}\"'.format(phy_health_value)\n",
-      "\n",
-      "NameError: name 'phy_health_value' is not defined\n",
-      "\n"
-     ]
     }
    ],
    "source": [
@@ -886,16 +927,9 @@
     "\n",
     "#layout is saved to a variable so I dont have to keep running it\n",
     "app.layout = html.Div([\n",
-    "    link,\n",
-    "    banner_item,\n",
-    "    html.Button(\n",
-    "        id='submit_button_id',\n",
-    "        children='Submit',\n",
-    "        n_clicks=0,# Initialize number of clicks to 0\n",
-    "        style={\n",
-    "            'margin-top': 10,# Optional: Add some margin\n",
-    "        }\n",
-    "    ),\n",
+    "    link, \n",
+    "    banner_item,  \n",
+    "    doctorcat_item, \n",
     "    ########################################################################################################\n",
     "    ################## Define input and out for income drop down ###########################################\n",
     "    #######################################################################################################\n",
@@ -934,7 +968,7 @@
     "      }\n",
     "    ),\n",
     "     ######################################################################\n",
-    "    ##################  OUTPUT VALUE for income #######################\n",
+    "    ##################  OUTPUT VALUE for general health #######################\n",
     "    \n",
     "    html.Div(id='gen-health-output'),\n",
     "    \n",
@@ -943,8 +977,46 @@
     "        children=[\n",
     "            dcc.Dropdown(\n",
     "                id='phy_health_id',\n",
-    "                options=menu_income,\n",
-    "                placeholder=\"Please choose your income range.\",\n",
+    "                options=phy_health,\n",
+    "                placeholder=\"Please choose your physical health code.\",\n",
+    "                value=user_input_value\n",
+    "            )\n",
+    "        ],\n",
+    "        style={\n",
+    "            \"display\": \"block\"\n",
+    "        }\n",
+    "    ),\n",
+    "    ######################################################################\n",
+    "    ##################  OUTPUT VALUE for physical health days #######################\n",
+    "    \n",
+    "    html.Div(id='phy-health-output'),\n",
+    "    \n",
+    "    ################################################################################################\n",
+    "     html.Div(\n",
+    "        children=[\n",
+    "            dcc.Dropdown(\n",
+    "                id='men_health_id',\n",
+    "                options=men_health,\n",
+    "                placeholder=\"Please choose your physical health range.\",\n",
+    "                value=user_input_value\n",
+    "            )\n",
+    "        ],\n",
+    "        style={\n",
+    "            \"display\": \"block\"\n",
+    "        }\n",
+    "    ),\n",
+    "    ######################################################################\n",
+    "    ##################  OUTPUT VALUE for mental health #######################\n",
+    "    \n",
+    "    html.Div(id='men-health-output'),\n",
+    "    \n",
+    "    #################################\n",
+    "     html.Div(\n",
+    "        children=[\n",
+    "            dcc.Dropdown(\n",
+    "                id='diff_id',\n",
+    "                options=phy_health,\n",
+    "                placeholder=\"Please choose number of days you had diffculty walking.\",\n",
     "                value=user_input_value\n",
     "            )\n",
     "        ],\n",
@@ -955,11 +1027,11 @@
     "    ######################################################################\n",
     "    ##################  OUTPUT VALUE for income #######################\n",
     "    \n",
-    "    html.Div(id='phy-health-output'),\n",
+    "    html.Div(id='diff-output'),\n",
     "    \n",
-    "    ################################################################################################\n",
-    "    \n",
-    "])\n",
+    "    #################################\n",
+    "    border1_item,\n",
+    " ])   \n",
     "#########################################\n",
     "############ call back for income drop down\n",
     "###############################\n",
@@ -989,111 +1061,32 @@
     "    [ Input('phy_health_id', 'value')]\n",
     ")\n",
     "\n",
-    "def callback_b(gphy_health_value):\n",
+    "def callback_c(phy_health_value):\n",
     "    return 'Youve selected \"{}\"'.format(phy_health_value)\n",
     "\n",
+    "#################################################\n",
+    "###### call back for phy health\n",
+    "############################################\n",
+    "@app.callback(\n",
+    "    Output('men-health-output', 'children'),\n",
+    "    [ Input('men_health_id', 'value')]\n",
+    ")\n",
+    "\n",
+    "def callback_c(men_health_value):\n",
+    "    return 'Youve selected \"{}\"'.format(men_health_value)\n",
+    "#################################################\n",
+    "###### call back for phy health\n",
+    "############################################\n",
+    "@app.callback(\n",
+    "    Output('diff-output', 'children'),\n",
+    "    [ Input('diff_id', 'value')]\n",
+    ")\n",
+    "\n",
+    "def callback_c(diff_value):\n",
+    "    return 'Youve selected \"{}\"'.format(diff_value)\n",
+    "#############################################\n",
     "if __name__ == '__main__':\n",
     "    app.run_server(debug=True,port=8054)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 217,
-   "id": "da8fa67e-3ab4-40b4-95d0-59c2e9655898",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "---------------------------------------------------------------------------\n",
-      "NoLayoutException                         Traceback (most recent call last)\n",
-      "NoLayoutException: The layout was `None` at the time that `run_server` was called.\n",
-      "Make sure to set the `layout` attribute of your application\n",
-      "before running the server.\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"650\"\n",
-       "            src=\"http://127.0.0.1:8054/\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1cea603f0d0>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import dash\n",
-    "from dash import html, dcc\n",
-    "from dash.dependencies import Input, Output\n",
-    "\n",
-    "app = dash.Dash(__name__)\n",
-    "\n",
-    "# Initialize user_input_value\n",
-    "user_input_value = None\n",
-    "\n",
-    "#layout is saved to a variable so I dont have to keep running it\n",
-    "layout = html.Div([\n",
-    "    link,\n",
-    "    banner_item,\n",
-    "    html.Button(\n",
-    "        id='submit_button_id',\n",
-    "        children='Submit',\n",
-    "        n_clicks=0,# Initialize number of clicks to 0\n",
-    "        style={\n",
-    "            'margin-top': 10,# Optional: Add some margin\n",
-    "        }\n",
-    "    ),\n",
-    "    html.Div(\n",
-    "        children=[\n",
-    "            dcc.Dropdown(\n",
-    "                id='menu_income_id',\n",
-    "                options=menu_income,\n",
-    "                placeholder=\"Please choose your income range.\",\n",
-    "                value=user_input_value\n",
-    "            )\n",
-    "        ],\n",
-    "        style={\n",
-    "            \"display\": \"block\"\n",
-    "        }\n",
-    "    ),\n",
-    "    html.Div(\n",
-    "        id='dd-output-container'\n",
-    "    )\n",
-    "])\n",
-    "\n",
-    "@app.callback(\n",
-    "    Output(component_id='dd-output-container', component_property='children'),\n",
-    "    [Input(component_id='submit_button_id', component_property='n_clicks'),\n",
-    "     Input(component_id='menu_income_id', component_property='value')]\n",
-    ")\n",
-    "def update_output(n_clicks, menu_income_value):\n",
-    "    if n_clicks > 0:\n",
-    "        user_input = {\n",
-    "            \"income_code\": menu_income_value,\n",
-    "            # ... add other user input variables\n",
-    "        }\n",
-    "        # ... your logic here ...\n",
-    "        return f\"User submitted data: {user_input}\"\n",
-    "    else:\n",
-    "        return \"Click the submit button to see the output.\"\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    app.run_server(debug=True,port=8054)"
    ]
   },
   {
