--- a/Html_Testing.ipynb
+++ b/Html_Testing.ipynb
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 350,
    "id": "0b3e012c-1db8-4219-ab7a-ae4d1324f323",
    "metadata": {},
    "outputs": [
@@ -908,7 +908,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1cea7150970>"
+       "<IPython.lib.display.IFrame at 0x1ceaf061070>"
       ]
      },
      "metadata": {},
@@ -997,7 +997,7 @@
     "            dcc.Dropdown(\n",
     "                id='men_health_id',\n",
     "                options=men_health,\n",
-    "                placeholder=\"Please choose your physical health range.\",\n",
+    "                placeholder=\"Please choose your mental health range.\",\n",
     "                value=user_input_value\n",
     "            )\n",
     "        ],\n",
@@ -1029,8 +1029,58 @@
     "    \n",
     "    html.Div(id='diff-output'),\n",
     "    \n",
-    "    #################################\n",
+    "    #########     ##################            PARA GRAPH DATA                    ########################\n",
     "    border1_item,\n",
+    "     html.Div(\n",
+    "    children=[\n",
+    "        html.H1(\"Capstone: CDC Diabetes Project\")\n",
+    "    ])\n",
+    "    ,\n",
+    "    html.Div(\n",
+    "    children=[\n",
+    "        html.P(\"This is the result of a Logcial Regression Capstone Project used to determine the probability of diabetes based select features.  My desire is to use this capstone to demonstrate skills in the areas of data science, machine learning, and python to predict and outcome using data analysis.\")\n",
+    "    ])\n",
+    "    ,\n",
+    "    html.Div(\n",
+    "    children=[\n",
+    "        html.H2(\"About the Data\"),\n",
+    "        html.P('\"The Diabetes Health Indicators Dataset contains healthcare statistics and lifestyle survey information about people in general along with their diagnosis of diabetes. -- source: Machine learning repository\"'),\n",
+    "        html.A('Available Data',\"https://archive.ics.uci.edu/dataset/891/cdc+diabetes+health+indicators\"),\n",
+    "        html.A('CDC data Codes', \"https://www.cdc.gov/brfss/annual_data/2014/pdf/CODEBOOK14_LLCP.pdf\"),\n",
+    "\n",
+    " \n",
+    "    ])\n",
+    "    ,\n",
+    "     html.Div(\n",
+    "    children=[\n",
+    "        html.P(\"Raw data\")\n",
+    "    ])\n",
+    "    ,\n",
+    "     html.Div(\n",
+    "    children=[\n",
+    "        html.H2(\"Step 1: Explort the Data\")\n",
+    "    ])\n",
+    "    ,\n",
+    "     html.Div(\n",
+    "    children=[\n",
+    "        html.H2(\"Step 2: Visual the data\")\n",
+    "    ])\n",
+    "    ,\n",
+    "     html.Div(\n",
+    "    children=[\n",
+    "        html.H2(\"Step 3: Create Predictive models\")\n",
+    "    ])\n",
+    "    ,\n",
+    "    html.Div(\n",
+    "    children=[\n",
+    "        html.H2(\"Step 4: Create Test program to accept user input and display prediction\")\n",
+    "    ])\n",
+    "     \n",
+    "    ,\n",
+    "    html.Div(\n",
+    "    children=[\n",
+    "        html.H2(\"Step 5: Build the app\")\n",
+    "    ])\n",
     " ])   \n",
     "#########################################\n",
     "############ call back for income drop down\n",
