--- a/Html_Testing.ipynb
+++ b/Html_Testing.ipynb
@@ -187,6 +187,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 118,
+   "id": "a9401bd5-3160-46b2-bd2a-0f145cbcab27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "boxplot_img = Image.open(\"assets/boxplot.PNG\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "47fe01b8-7978-41d0-adc3-bc4b0927243f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "boxplot_item = html.Div(\n",
+    "    [\n",
+    "        html.Div(\n",
+    "            html.Div(\n",
+    "                [\n",
+    "                    html.Div([\n",
+    "                       # html.Img(src=banner_img, style={'width': '100%', 'height': '50%'})\n",
+    "                        html.Img(src=boxplot_img, style={'width': '800px', 'height': '600px', 'justify-content': 'center', 'align-items': 'center'})\n",
+    "                       # html.Img(src=banner_img, 'width': '50%', 'height': '200px'),               # using the pillow image variable\n",
+    "                        \n",
+    "                    ]),\n",
+    "                    html.Div(className=\"sidebar-wrapper\"),\n",
+    "                ]\n",
+    "            ),\n",
+    "            className=\"sidebar\",\n",
+    "        ),\n",
+    "        html.Div(\n",
+    "            html.Div(\n",
+    "                html.Div(className=\"container-fluid\"),\n",
+    "                className=\"navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top \",\n",
+    "            ),\n",
+    "            className=\"main-panel\",\n",
+    "        ),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "boxplot_item.style = {'gridArea': \"boxplot_item\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "092966f4-0619-4668-b80b-3eec41f6860e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Model_img = Image.open(\"assets/Model.PNG\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 93,
    "id": "9ae91cc1-7258-4936-a2e9-7b752b5a25d5",
    "metadata": {},
@@ -1793,11 +1849,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 117,
    "id": "cf858699-98cf-4fcc-a591-cbf8e93f4019",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "#Bullet Point data\n",
+    "\n",
     "steps = [\n",
     "    \"Import pandas\",\n",
     "    \"Reading in Data\",\n",
@@ -1805,14 +1864,55 @@
     "    \"Reset Index\",\n",
     "    \"Identified no missing data\",\n",
     "    \"Relationships between variables uisng heatmap\" \n",
+    "]\n",
+    "\n",
+    "\n",
+    "tools_used = [\n",
+    "    \"Git - source code management\",\n",
+    "    \"GitBash - terminal application used to push changes up to Github Repository\",\n",
+    "    \"Jupyter Notebook - web application used to create my documents\",\n",
+    "    \"Anaconda Prompt - used command line interface to manage my virutal environment and access Jupyter notebook\",\n",
+    "    \"TCPView - Used to identify and terminate apps running ports on local machine\",\n",
+    "    \"Pycharm -  Integrated Development Environment (IDE) used to launch my app to render\",   \n",
+    "    \"Render - free web hosting service used to deploy my app to the web\"\n",
+    "\n",
+    "\n",
+    "]\n",
+    "\n",
+    "\n",
+    "issues = [\n",
+    "\n",
+    "\n",
+    "    \"box plot shows large variances and outliers in Mental Health and Physical Health Data.   outliers can be removed from the dataset prior to modeling. It is good practice to note specifically what outlier values were removed and why\",\n",
+    "    \"Outliers can be removed from the dataset prior to modeling. It is good practice to note specifically what outlier values were removed and why\",\n",
+    "    \" Data was note  data should form a bell shaped curve but skewed. How will you transform the skewed data so it is suitable for modeling\"\n",
+    "\n",
+    "]\n",
+    "\n",
+    "\n",
+    "treatment = [\n",
+    "   \"To address large variances and outliers in Mental Health and Physical Health Dat, I used the IQR method to remove the outliers for Mental Health and Physical Health data.  The risk is I may not have accurately identify anomolies and removed critcal data for analysis however my model performance will be improved.\"\n",
+    "\n",
+    "\n",
+    "\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "id": "868cb133-8717-436b-80b4-265ee91d700c",
+   "execution_count": null,
+   "id": "241aa6d4-8937-4cd9-a36d-0a5d61f7677b",
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "868cb133-8717-436b-80b4-265ee91d700c",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1829,7 +1929,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x125e19f9be0>"
+       "<IPython.lib.display.IFrame at 0x125e261feb0>"
       ]
      },
      "metadata": {},
@@ -1997,12 +2097,28 @@
     "      ])\n",
     "    ])\n",
     "         \n",
-    "    \n",
-    "    \n",
     "    ,\n",
-    "    html.Div([exploredata_item, heatmap_item])\n",
+    "     html.Div(\n",
+    "    children=[\n",
+    "        html.H3(\"Identified issues with the data\")\n",
+    "    ])\n",
+    "     \n",
     "    ,\n",
     "     \n",
+    "\n",
+    "   \n",
+    "    html.Div([exploredata_item, heatmap_item])\n",
+    "    ,\n",
+    "       html.Div([\n",
+    "    html.Ul([\n",
+    "        html.Li(step) for step in issues\n",
+    "      ])\n",
+    "    ])\n",
+    "    ,\n",
+    "         \n",
+    "    html.Div([boxplot_item])\n",
+    "    \n",
+    "    ,\n",
     "     border1_item\n",
     "    ,\n",
     "     html.Div(\n",
@@ -2043,6 +2159,24 @@
     "    children=[\n",
     "        html.H2(\"Step 5: Build the app\")\n",
     "    ])\n",
+    "    ,\n",
+    "    \n",
+    "    border1_item \n",
+    "    ,\n",
+    "    html.Div(\n",
+    "    children=[\n",
+    "        html.H2(\"Summary Tools Used\")\n",
+    "    ])\n",
+    "    ,\n",
+    "    \n",
+    "    html.Div([\n",
+    "    html.Ul([\n",
+    "        html.Li(step) for step in tools_used\n",
+    "      ])\n",
+    "    ])\n",
+    "    \n",
+    "    \n",
+    "    ,\n",
     " ])   \n",
     "#########################################\n",
     "############ call back for income drop down\n",
@@ -2103,7 +2237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 107,
    "id": "93b78282-fcbf-4e81-afd9-2f849edd1e8f",
    "metadata": {},
    "outputs": [],
