--- a/Feature_Engineering.ipynb
+++ b/Feature_Engineering.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "87ebe3fe",
    "metadata": {
     "scrolled": true
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d6b8f0e3-313c-49ce-bc4a-9215df6f5fc2",
    "metadata": {},
    "outputs": [],
@@ -78,8 +78,8 @@
    "metadata": {},
    "source": [
     " \n",
-    "# Why?  reading from your local directory  is much faster\n",
-    "#run will do the follow:\n",
+    "# Reading from my local directory  is much faster\n",
+    "Class : method run will do the follow:\n",
     "\n",
     "1. take a list of names. For example: ['menhealth','menhealth','physical','dietary,heart','sex,edu','all']\n",
     "2. each name will call another function to read the local directory and retrieve the CSV adn return it as a df\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c249f9df-f26a-467d-914b-3a205e024a9b",
    "metadata": {},
    "outputs": [],
@@ -98,6 +98,24 @@
     "#read in all the data from your local directory.\n",
     "data = prepared_data.run()\n",
     " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ce0d092-8466-49f3-82c1-ad3a212ea8bf",
+   "metadata": {},
+   "source": [
+    "# Addressing the Issue:  Outliers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11c9b878-1b0b-4980-abd0-03624251d7eb",
+   "metadata": {},
+   "source": [
+    " I will use quartiles to address outliers.  \n",
+    "Pros: I may not accurately identify anomolies. \n",
+    "Cons:  I will increase my logistic model performance"
    ]
   },
   {
