--- a/Visualizing and Interpreting Data.ipynb
+++ b/Visualizing and Interpreting Data.ipynb
@@ -65,7 +65,7 @@
    "id": "0f208da8",
    "metadata": {},
    "source": [
-    "### Feature: General Health Codes"
+    "### Feature: General Health Codes - Check for Bell curve:"
    ]
   },
   {
@@ -166,7 +166,7 @@
    "id": "d5b3d19e",
    "metadata": {},
    "source": [
-    "### Feature: Mental Health Codes"
+    "### Feature: Mental Health Codes - Check for Bell curve:"
    ]
   },
   {
@@ -563,6 +563,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "132313fd-f80f-44d6-8ed6-39be47e2d209",
+   "metadata": {},
+   "source": [
+    "box plot shows large variances and outliers in Mental Health and Physical Health Data. This diffently presents a skewed distribution. Since, I do plan to use logistic regression since they data consist of 0,1. I am considering using quartiles to address outliers but that may not accurately identify anomolies. I will considering treating these outliers using an anonmaly detection technique."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "id": "fff06ae0",
@@ -570,15 +578,6 @@
    "outputs": [],
    "source": [
     "df_subset = df[['Diabetes_binary','Income','GenHlth','MentHlth','PhysHlth','DiffWalk']]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "403b9e93",
-   "metadata": {},
-   "source": [
-    "\n",
-    "Box plot shows large variances and outliers in Mental Health and physicla health data"
    ]
   },
   {
@@ -1113,7 +1112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
